analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/delegatedPropertyWithAccessors.kt
// WITH_STDLIB

var lazy<caret>Prop by lazy { setOf("zzz") }
    private get
    internal set
